--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,7 @@
 # Changelog
+
+## 0.1.1
+  - More documentation
+
+## 0.1.0
+  - All the needed code and tests. The functions are not in their final version
