--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Changelog
 
+## 0.2.0
+  - map/mapAsync/filter receive index of the iteration as second parameter
+
 ## 0.1.1
   - More documentation
 
